--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -63,6 +63,7 @@ h1 {
     width: 320px;
     transition: transform 0.2s, box-shadow 0.2s;
     border-top: 6px solid #35424a;
+    box-sizing: border-box;
 }
 
 .event-list article:hover {
@@ -157,4 +158,28 @@ footer {
     .event-list article {
         width: 90%;
     }
+}
+
+@media (max-width: 600px) {
+    .event-list {
+        flex-direction: column;
+        align-items: center;
+        gap: 1em;
+        margin: 20px 0;
+        width: 100%;
+    }
+    .event-list article {
+        width: 98vw;
+        padding: 1em 0.5em 1em 0.5em;
+        margin: 0;
+    }
+    .container {
+        width: 100vw;
+        padding: 0;
+    }
+}
+
+body, html {
+    max-width: 100vw;
+    overflow-x: hidden;
 }
