--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,6 @@
+/* Import de la police Playwrite DE Grund */
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap');
+
 html, body {
     width: 100%;
     max-width: 100vw;
@@ -10,7 +13,7 @@ html, body {
 }
 
 body {
-    font-family: 'Segoe UI', Arial, sans-serif;
+    font-family: 'Playwrite DE Grund', Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
